change search-results to panel-list with attribute and set up pagination to work with fixed height rows rather than what is visible, as that won't work on the last page.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -477,11 +477,11 @@ app-panel:nth-of-type(2) panel-list list-item {
 }
 
 app-panel:nth-of-type(3) > list-item,
-search-results list-item {
+app-panel:nth-of-type(3) panel-list list-item {
   grid-template-columns: minmax(3rem, 3rem) minmax(3rem, 4rem) minmax(3rem, 1fr) minmax(3rem, 1fr) minmax(3rem, 1fr) minmax(3rem, 1fr);
 }
 
-search-results list-item list-cell:nth-of-type(2) {width: auto;}
+app-panel:nth-of-type(3) panel-list list-item list-cell:nth-of-type(2) {width: auto;}
 
 app-panel:nth-of-type(5) > list-item:first-of-type {
   grid-template-columns: 1fr auto;
